--- a/com.github.abigail830/ContractProvider/ContractConsumer1/should_get_health_status.yml
+++ b/com.github.abigail830/ContractProvider/ContractConsumer1/should_get_health_status.yml
@@ -9,6 +9,6 @@ response:
   headers:
     Content-Type: application/json;charset=UTF-8
   body: |
-    { "status": "up" }
+    { "status": "down" }
 
 
